--- a/public/uoft-pey-coop-jobs-2023.html
+++ b/public/uoft-pey-coop-jobs-2023.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UofT PEY Co-op Jobs (2023-2024 Fall/Winter)</title>
+
+  <!-- Open Graph meta tags -->
+  <meta property="og:title" content="UofT PEY Co-op Jobs (2023-2024 Fall/Winter)" />
+  <meta property="og:description" content="Explore all PEY Co-op job postings for the 2023-2024 Fall/Winter term at the University of Toronto." />
+  <meta property="og:image" content="public/static/twitter-card.png" />
+  <meta property="og:url" content="https://sadman.ca/uoft-pey-coop-jobs-2023" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Sadman's Blog" />
+
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="UofT PEY Co-op Jobs (2023-2024 Fall/Winter)" />
+  <meta name="twitter:description" content="Explore all PEY Co-op job postings for the 2023-2024 Fall/Winter term at the University of Toronto." />
+  <meta name="twitter:image" content="public/static/twitter-card.png" />
+  <meta name="twitter:site" content="@sadmanca" />
+
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
