--- a/public/uoft-work-study-2024.html
+++ b/public/uoft-work-study-2024.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UofT Work Study Jobs (2024-2025 Fall/Winter)</title>
+
+  <meta property="og:title" content="UofT Work Study Jobs (2024-2025 Fall/Winter)" />
+  <meta property="og:description" content="Explore all Work Study job postings for the 2024-2025 Fall/Winter term at the University of Toronto." />
+  <meta property="og:image" content="public/static/twitter-card.png" />
+  <meta property="og:url" content="https://sadman.ca/uoft-work-study-2024" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Sadman's Blog" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="UofT Work Study Jobs (2024-2025 Fall/Winter)" />
+  <meta name="twitter:description" content="Explore all Work Study job postings for the 2024-2025 Fall/Winter term at the University of Toronto." />
+  <meta name="twitter:image" content="public/static/twitter-card.png" />
+  <meta name="twitter:site" content="@your_twitter_handle" />
+
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
