fix: info icon color issue

--- a/public/uoft-pey-coop-jobs-2023.html
+++ b/public/uoft-pey-coop-jobs-2023.html
@@ -214,7 +214,7 @@
             <i class="fa-solid fa-circle" style="color: #6e46e7;"></i> Sadman's Blog
           </button>
           <button id="dataButton" class="btn btn-dark btn-sm right-buttons" onclick="window.open('posts/analyzing-pey-postings-part-1/', '_blank')">
-            <i class="fa-solid fa-circle-question" style="color: #ffffff;"></i> <i>How was this data sourced?</i>
+            <i class="fa-solid fa-circle-question"></i> <i>How was this data sourced?</i>
           </button>
           <button id="githubButton" class="btn btn-dark btn-sm right-buttons" onclick="window.open('https://github.com/sadmanca/uoft-pey-coop-job-postings', '_blank')">
             <i class="fa-brands fa-github"></i>
