--- a/public/uoft-work-study-2024.html
+++ b/public/uoft-work-study-2024.html
@@ -212,7 +212,7 @@
             <i class="fa-solid fa-circle" style="color: #6e46e7;"></i> Sadman's Blog
           </button>
           <button class="btn btn-success btn-sm right-buttons" onclick="window.open('/posts/work-study-at-uoft/', '_blank')">
-            <i class="fa-solid fa-circle-question" style="color: #ffffff;"></i> <i>What are work study jobs?</i>
+            <i class="fa-solid fa-circle-question"></i> <i>What are work study jobs?</i>
           </button>
           <button id="githubButton" class="btn btn-dark btn-sm right-buttons" onclick="window.open('https://github.com/sadmanca/uoft-work-study-jobs-2024', '_blank')">
             <i class="fa-brands fa-github"></i>
